# Audio_programming_book_code

./: LICENSE
BookCode/appendix/BbaileyAPPNDXexamples/: B-APPNDXexamples-guide.doc  Makefile.am  Makefile.in  config.status  configure  configure.ac  ftom.c  simple_oscil.c  simple_waveforms.c  simple_waveforms.h
BookCode/appendix/BbaileyAPPNDXexamples/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
BookCode/appendix/ClazzariniAPPNDXexamples/: C-APPNDXexamples-guide.doc  aiff2wave.c  soundfile.c  wave.h
BookCode/appendix/DlazzariniAPPNDXexamples/: D-APPNDXexamples-guide.doc  echo.c  echo2.c
BookCode/appendix/ElazzariniAPPNDXexamples/: E-APPNDXexamples-guide.doc  arpeg.c  pmidiin.c  pmidiout.c
BookCode/chapters/00lazariniBOOKexamples/: 00BOOKexamples-guide.doc  complex.c  interval.c  interval2.c  scale.c  scale2.c  series.c  series.cpp
BookCode/chapters/01dobsonBOOKexamples/: 01BOOKexamples-guide.doc  Makefile  breakdur.c  cpsmidi.c  expad.c  expbrk.c  expdec.txt  expdecay.c  freq2midi.c  iscale.c  midi2freq.c  nscale.c  sinetext.c  sinetext2.c  sqrt.c  tfork.c  tfork2.c  tforkraw.c  wonder.c
BookCode/chapters/02dobsonBOOKexamples/: 02BOOKexamples-guide.doc  Makefile  am_traffic.aif  am_traffic_float.aif  breakpoints.c  envx.c  fsweep.brk  gtable.c  jungle.brk  license.txt  main.c  oscgen.c  pan6.brk  sf2float  sf2float.c  sfenv.c  sfgain.c  sfnorm.c  sfpan.c  sfpeak  sfpeak.c  siggen.c  tabgen.c  trafficpan.aiff  trafjungle.aiff  wave.c
BookCode/chapters/03maldonadoBOOKexamples/: 03BOOKexamples-guide.doc  crack.c  helloring.c  (+6 more)
(+322 files in other folders)
